new file:   .gitignore 	new file:   images/CommertialAlternativeDesign.png 	new file:   images/Fig13.png 	new file:   images/GlobalSystemDesing.png 	new file:   images/InternalSystemDesign.png 	new file:   images/WiFiEnergyEff.png 	modified:   main.pdf 	modified:   main.tex

--- a/main.tex
+++ b/main.tex
@@ -109,10 +109,15 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 
 \subsection{Научная новизна и практическая значимость}
 Уменьшение задержек, расширение сфер применения: в предлагаемой системе уменьшается количество узлов между устройством, порождающим событие, и устройством исполнителем (при нахождении в одной сети - до нуля), за счет чего увеличивается скорость выполнения команд и повышается общая отзывчивость системы, что расширяет сферы применения устройств ИВ для построения СДА, ранее нефункциональных ввиду относительно больших задержек.
+
 Повышение комфорта использования: данные о состоянии устройств, как и статистика, собираемая устройствами, хранится и обрабатывается на самих устройствах, что позволяет в случае восстановления системы после сбоя из-за внештатной ситуации, например отключение электроэнергии, сразу возобновить работу системы без ожидания синхронизации состояния.
+
 Упрощение настройки системы: так как для настройки системы используется планировщик, распределяющий сценарии по устройствам, нет необходимости настраивать каждое устройство по-отдельности.
+
 Кроме того, повышается отказоустойчивость системы: в рамках одной локации невыполнение сценария возможно при неисправности только одного из двух устройств: устройства-инициатора или устройства-исполнителя.
+
 Повышается безопасность системы: распределенный подход для хранения сценариев и управления устройствами минимизирует получение злоумышленниками доступа ко всем устройствам . Объединение локаций, а также дистанционный мониторинг и управление системой осуществляется посредством шлюзов-ретрансляторов с использованием VPN соединения, что избавляет от единой точки отказа системы (точки входа) и 
+
 Нижеизложенный прототип может быть использован для построение адаптивной системы изменения освещения для подстройки под потребляемый пользователем контент для большего эффекта погружения (использование осветительный приборов в качестве фонового освещения). Так же данная система ввиду уменьшения задержек по сравнению с аналогами может быть использована для предсказания положения пользователя в умном здании и подстройки окружающего пространства под нужны пользователя с минимальной задержкой. Например, предсказываемое изменение состояния устройств, находящихся в одной локации с пользователем.
 В качестве сфер применения можно рассматривать не только системы домашней автоматизации, но и системы умных предприятий. Так данная система будет востребована на участках, связанных с риском для жизни, где использование проводов не представляется возможным, либо излишне затруднит построение “умного” предприятия. Например, металлургические предприятия.
 
@@ -127,7 +132,7 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{images/Fig06.png}
-    \caption{Топологии беспроводных сетей}
+    \caption{Топологии беспроводных сетей \cite{wirelessNetProtocols} }
     \label{fig:topologies}
 \end{figure}
 
@@ -140,7 +145,7 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \subsubsection{Топология «Звезда»}
 Эта топология служит основой организации всех современных сетей связи и вычислительных сетей. Данную топологию используют протоколы WI-FI, Insteon, ZigBee, UWB, IDEN, CDMAOne, WIMAX, GSM, GPRS, UTMS.
 
-\subsubsection{Топология «многоячейковая сеть» (Ячеистая топология)}
+\subsubsection{Ячеистая топология}
 Ячеистая топология — базовая полносвязная топология компьютерных сетей и сетей связи, в которой каждая рабочая станция сети соединяется со всеми другими рабочими станциями этой же сети. Характеризуется высокой отказоустойчивостью, сложностью настройки и избыточным расходом кабеля в проводных сетях. Каждый узел имеет несколько возможных путей соединения с другими узлами, за счет этого такая топология очень устойчива. Так как исчезновение одного из каналов не приводит к потере соединения между двумя компьютерами. Эта топология допускает соединение большого количества узлов и характерна, как правило, для крупных сетей, она строится из полносвязной путем удаления некоторых возможных связей.
 Топология применима для сетей с использованием протоколов UWB, WI-FI, Insteon, ZigBee, UWB, IDEN, CDMAOne, WIMAX, GSM, GPRS, UTMS.
 
@@ -149,11 +154,11 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 Вычислительные сети с древовидной структурой строятся там, где невозможно непосредственное применение базовых сетевых структур в чистом виде.
 
 
-\subsection{Краткий обзор имеющихся альтернатив}
+\subsection{Обзор альтернатив}
 В данный момент большинство производителей ИВ используют централизованный подход для построения СДА \cite{Rus_alternative}. В качестве центра умного дома (ЦУД) выступает устройство (хаб), объединяющее конечные устройства в единую сеть. Сценарии взаимодействия устройств могут быть локальными (сценарии хранятся в ЦУД) или облачными. Вариант с локальным расположением сценариев более предпочтительный, так как повышается отзывчивость системы и ее отказоустойчивость. Отдельную сложность представляет объединение устройств из разных экосистем: различные комбинации связей <<устройство>>, <<ЦУД>>, <<облако>>.
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.8\textwidth]{images/Fig03.png}
+    \includegraphics[width=0.8\textwidth]{images/CommertialAlternativeDesign.png}
     \caption{Пример СДА с облачной обработкой событий}
     \label{fig:cloud_event_processing}
 \end{figure}
@@ -162,20 +167,50 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 
 Стоит различать аппаратные ограничения, не позволяющие изменить топологию системы, связанные с особенностью работы протокола, например, топологию Bluetooth, позволяющую организовывать только связи типа точка-точка или точка - множество устройств, и архитектуру системы УД, подразумевающую централизованное выполнение сценария в ЦУД либо облаке.
 
-%\begin{figure}[h]
-%    \centering
-%    \subfloat[Первая картинка]{\includegraphics[width=0.45\textwidth]{images/Fig0.png}} \hfill
-%    \subfloat[Вторая картинка]{\includegraphics[width=0.45\textwidth]{images/Fig02.png}}
-%    \caption{Две картинки с одной подписью}
-%    \label{fig:two_images}
-%\end{figure}
 
 
-\subsubsection{Wi-Fi и Wi-Fi Mesh}
-Протокол беспроводной передачи данных, основанный на IEEE 802.11, работающий на частоте 2.4 Ггц(802.11b), 5ГГц (IEEE 802.11ac), 6 ГГц (IEEE 802.11ax). Ячеистая топология доступна в 802.11s. Доступны различные протоколы маршрутизации в рамках ячеистой топологии [19], но имеет требование наличия HWMP [18] в качестве базового протокола. Устройства, использующие данный стандарт, как правило представляют собой систему WLAN расширения зон покрытия, в которых роутеры ретранслируют сигнал для увеличения дальности. Протокол мало пригоден для построения систем домашней автоматизации ввиду высокого потребления электроэнергии.
+
+
+
+\subsubsection{Wi-Fi и Wi-Fi HaLow}
+
+Протокол Wi-Fi относится к семейству стандартов IEEE 802.11, реализующих беспроводную передачу данных в различных частотных диапазонах:
+\begin{itemize}
+    \item 2{,}4 ГГц — стандарты 802.11b/g/n;
+    \item 5 ГГц — 802.11a/ac;
+    \item 6 ГГц — 802.11ax (Wi-Fi 6E).
+\end{itemize}
+Эти протоколы поддерживают высокую пропускную способность и широкое распространение благодаря простой интеграции в клиентские устройства. Однако они изначально не предназначены для энергоэффективных решений, что ограничивает их применение в системах домашней автоматизации, особенно если подразумевается использование батарейного питания. Так же различные виды конфигурации сети могут оказывать значительное влияние на время автономной работы IoT-устройства. \cite{WifiSmartHome}
+
+
+\paragraph{IEEE 802.11ah (Wi-Fi HaLow)} — расширение Wi-Fi в суб-ГГц диапазоне для IoT и промышленных задач. Обеспечивает дальность до километра, поддержку до тысяч устройств и низкое энергопотребление, что проиллюстрированно на рис.  \ref{fig:wifi_energy_eff}, благодаря механизмам Target Wake Time и RAW. Сохраняет уровень MAC совместимым с Wi-Fi, унаследовав безопасность и QoS.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/WiFiEnergyEff.png}
+    \caption{Сравнение энергоэффективности протоколов \cite{IMG_protocol_compare_power_eff}}
+    \label{fig:wifi_energy_eff}
+\end{figure}
+
+\paragraph{Основные элементы архитектуры и топологии}
+\begin{itemize}
+  \item \textbf{Диапазон частот:} 863–928 МГц (региональные поддиапазоны).
+  \item \textbf{Узлы:} 
+    \begin{itemize}
+      \item \emph{STA} (датчики/актуаторы) с поддержкой энергосбережения.
+      \item \emph{AP} (Access Point), иногда \emph{Relay AP} (ретрансляторы).
+    \end{itemize}
+  \item \textbf{Топология:} нет встроенного mesh L2 -- дерево с ограниченной глубиной.
+\end{itemize}
+
+\paragraph{Преимущества и недостатки:}
+
+в качестве преимуществ IEEE 802.11ah можно выделить большую дальность связи (до 3 км вне помещений при использовании ретранслятора Relay AP), высокую плотность подключений (возможность обслуживания сотен устройств одной точкой доступа), а также низкое энергопотребление при малой активности. Вместе с тем, стандарту присущи: низкая пропускная способность по сравнению с Wi-Fi в диапазонах 2,4/5/6 ГГц, более высокая сложность и стоимость модулей по сравнению с устройствами на базе 802.15.4, из-за чего данный протокол не получил широкого распространения среди потребительских устройств, заняв только небольшую нишу промышленных IoT-устройств; а также сложности лицензирования различных диапазонов частот для разных стран.
+
+
 
 \subsubsection{Bluetooth Low Energy (BLE) и Bluetooth Mesh}
-Т.к. BLE Mesh лишь расширение стандарта, использующий особым образом режим рекламы для лавинообразного передачи сообщений, по техническим характеристикам он сильно похож на BLE. Для поддержания совместимости было использовано лавинообразное рассылка (flooding[22]), которая с большим количеством устройств может значительно увеличить территорию покрытия, но, с другой стороны, может привести к избыточной загруженности каналов, что после некоторой отметки в количестве устройств может привести к потерям пакетов. Так же метод является неоптимальным при небольшом количестве устройств ввиду счетчика TTL который на каждом шаге уменьшается и может обнулиться, не дойдя до адресата [20].
+Т.к. BLE Mesh лишь расширение стандарта, использующий особым образом режим рекламы для лавинообразного передачи сообщений, по техническим характеристикам он сильно похож на BLE. Для поддержания совместимости было использовано лавинообразное рассылка (flooding \cite{BLE_mesh_spec}), которая с большим количеством устройств может значительно увеличить территорию покрытия, но, с другой стороны, может привести к избыточной загруженности каналов, что после некоторой отметки в количестве устройств может привести к потерям пакетов. Так же метод является неоптимальным при небольшом количестве устройств ввиду счетчика TTL который на каждом шаге уменьшается и может обнулиться, не дойдя до адресата [20].
 
 \subsubsection{Zigbee}
 Протокол, основанный на IEEE 802.15.4, описывающий построение беспроводной персональной сети. Спецификация Zigbee ориентирована на приложения, требующие гарантированной безопасной передачи данных при относительно небольших скоростях и возможности длительной работы сетевых устройств от автономных источников питания (батарей). Основная особенность технологии Zigbee заключается в том, что она при малом энергопотреблении поддерживает не только простые топологии сети («точка-точка», «дерево» и «звезда»), но и самоорганизующуюся и самовосстанавливающуюся ячеистую (mesh) топологию с ретрансляцией и маршрутизацией сообщений. Кроме того, спецификация Zigbee содержит возможность выбора алгоритма маршрутизации в зависимости от требований приложения и состояния сети.
@@ -189,7 +224,7 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{images/Fig07.png}
-    \caption{Сравнение беспроводных протоколов передачи данных по дальности и скорости передачи.}
+    \caption{Сравнение беспроводных протоколов передачи данных по дальности и скорости передачи. \cite{IMG_protocol_compare} }
     \label{fig:protocols_range_vs_speed}
 \end{figure}
 
@@ -259,7 +294,7 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.8\textwidth]{images/Fig04.png}
+    \includegraphics[width=0.8\textwidth]{images/GlobalSystemDesing.png}
     \caption{Пример СДА с распределенной структурой}
     \label{fig:distributed_home_example}
 \end{figure}
@@ -417,12 +452,17 @@ K, перестанут обрабатываться межзонные собы
 
 \newpage
 \begin{thebibliography}{40}
-\bibitem{Rus_alternative} Шерчков~А.\:В. Анализ существующих технических решений <<Умный дом>> // Молодежный вестник Уфимского государственного авиационного технического университета. 2020. №~1 С.~153--155.
-\bibitem{smart_home_review} Тукмачева~Ю.\:А. Обзор и анализ автоматизированных систем <<Умный дом>>, представленных на российском сегменте рынка // Вестник науки. 2022. Т.~4. №~10 С.~139--144.
 \bibitem{wirelessNetProtocols} Колыбельников~А.\:И. Обзор технологий беспроводных сетей // ТРУДЫ МФТИ. 2012. Т.~4. №~2 С.~3--29.
+\bibitem{Rus_alternative} Шерчков~А.\:В. Анализ существующих технических решений <<Умный дом>> // Молодежный вестник Уфимского государственного авиационного технического университета. 2020. №~1 С.~153--155.
+\bibitem{WifiSmartHome} Montori~F., Contigiani~R., Bedogni~L., Is WiFi suitable for energy efficient IoT deployments? A performance study // 2017 IEEE 3rd International Forum on Research and Technologies for Society and Industry (RTSI). 2017. pp. 1-5, doi: 10.1109/RTSI.2017.8065943.
+\bibitem{smart_home_review} Тукмачева~Ю.\:А. Обзор и анализ автоматизированных систем <<Умный дом>>, представленных на российском сегменте рынка // Вестник науки. 2022. Т.~4. №~10 С.~139--144.
 \bibitem{SecuritySmartHome} Некрасов~П.\:В., Жариков~А.\:М., Козин~Д.\:А. Обеспечение безопасности беспроводных каналов связи киберфизических систем типа «Умный дом» // Безопасность информационных технологий. 2024. Т.~31. №~1 С.~54--62.
 \bibitem{SecuritySmartHome2} Vardakis~G., Hatzivasilis~G., Koutsaki~E., Papadakis~N. Review of smart-home security using the internet of things // Electronics. 2024. No~13 P.~33--43.
 \bibitem{YNDX_hub} Центр умного дома «Яндекс Хаб» модель YNDX-00510. Инструкция по эксплуатации [Электронный ресурс]: \url{URL: https://yastatic.net/s3/doc-binary/src/support/smart-home/hub/hub-manual.pdf} (дата обращения: 17.03.2025).
+\bibitem{BLE_mesh_spec} Specifications and Documents Mesh Protocol [Электронный ресурс]: \url{URL: https://www.bluetooth.com/specifications/specs/html/?src=MshPRT_v1.1/out/en/index-en.html} (дата обращения: 11.05.2025).
+\bibitem{IMG_protocol_compare} Сравнительный анализ стандартов связи для сетей IoT [Электронный ресурс]: \url{URL: https://habr.com/ru/companies/msw/articles/720518/} (дата обращения: 11.05.2025).
+
+\bibitem{IMG_protocol_compare_power_eff} Wi-Fi HaLow™ and LoRaWAN: How do the technologies compare? [Электронный ресурс]: \url{URL:https://dev.wi-fi.org/zh-hans/beacon/y-zachary-freeman/wi-fi-halow-and-lorawan-how-do-the-technologies-compare} (дата обращения: 11.05.2025).
 
 \end{thebibliography}
 
