modified:   main.pdf 	modified:   main.tex 	modified:   main.toc 	modified:   titlepage_example.tex

--- a/main.tex
+++ b/main.tex
@@ -25,9 +25,9 @@
 \usepackage{enumitem}
 \usepackage{titlesec}
 \usepackage{appendix}
+\usepackage{float}    % Для принудительной вставки картинок в определенное место (чтобы они не "плавали") [H]
 
 \usepackage[nottoc,numbib]{tocbibind} % Пакет tocbibind добавляет в оглавление пункты, которые обычно туда не попадают: библиографию, список иллюстраций, список таблиц и т. д.
- 
 
 \begin{document}
 
@@ -66,32 +66,29 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \subsection{Предмет исследования}
 Предметом научно-исследовательской работы является оптимизация обработки и передачи данных между устройствами ИВ в системе домашней автоматизации.
 
-\subsection{Цель работы}
-Целью работы является исследование систем представленных на рынке, изучение имеющихся протоколов, выбор оптимального, разработка прототипа системы.
-
 \subsection{Постановка задачи}
-После анализа существующих решений и выявления недостатков СДА, присутствующих на рынке, были сформулированы начальные
-условия (требования).
+
+В рамках данной работы ставится цель провести комплексное исследование существующих СДА на рынке, проанализировать применяемые в них протоколы и выявить основные недостатки. На основании этого выбрать оптимальный протокол и разработать прототип системы, отвечающий сформулированным требованиям и решающий обозначенный список проблем.
+
+Для достижения этой цели были сформулированы начальные условия (требования):
 
 \begin{enumerate}
-    \item Использование одноуровневой сети для связи устройств в рамках единой зоны.
-    \item Взаимодействие устройств осуществляется напрямую, без посредников в виде ЦУД.
-    \item Взаимодействие устройств из разных зон обеспечивается благодаря шлюзам-ретрансляторам, обединенными в единую сеть.
+    \item Сеть устройств в пределах одной зоны должна строиться по одноуровневому принципу, без централизованных узлов управления.
+    \item Взаимодействие устройств внутри зоны осуществляется напрямую, без посредников (ЦУД).
+    \item Для связи устройств из разных зон используются шлюзы-ретрансляторы, объединённые в единую распределённую сеть.
 \end{enumerate}
 
-\subsection{Научная новизна и практическая значимость}
-Уменьшение задержек, расширение сфер применения: в предлагаемой системе уменьшается количество узлов между устройством, порождающим событие, и устройством исполнителем (при нахождении в одной сети - до нуля), за счет чего увеличивается скорость выполнения команд и повышается общая отзывчивость системы, что расширяет сферы применения устройств ИВ для построения СДА, ранее нефункциональных ввиду относительно больших задержек.
+Практическая значимость предлагаемого подхода:
+\begin{itemize}
+    \item Уменьшение задержек, расширение сфер применения: в предлагаемой системе уменьшается количество узлов между устройством-инициатором и устройством-актуатором (при нахождении в одной сети - до нуля), за счет чего увеличивается скорость выполнения команд и повышается общая отзывчивость системы, что расширяет сферы применения устройств ИВ для построения СДА, ранее нефункциональных ввиду относительно больших задержек.
+    \item Повышение комфорта использования: данные о состоянии устройств, как и статистика, собираемая устройствами, хранится и обрабатывается на самих устройствах, что позволяет обеспечить короткое время восстановления работы после внештатных ситуаций (например, отключения питания) без длительной синхронизации.
+    \item Упрощение настройки системы: благодаря использованию планировщика, автоматически распределяющего сценарии по устройствам, нет необходимости в ручной конфигурации каждого узла.
+    \item Повышение отказоустойчивости: отказ сценария в одной локации возможен лишь при неисправности одного из двух устройств (инициатора и актуатора) и не зависит от иных устройств в сети. Объединение локаций, а также дистанционный мониторинг и управление системой осуществляется посредством распределенной системы шлюзов-ретрансляторов, что избавляет от единой точки отказа системы (точки входа).
+    \item Повышение безопасности: распределенный подход для хранения сценариев и управления устройствами минимизирует получение злоумышленниками доступа ко всем устройствам. Система шлюзов-ретрансляторов, использующих VPN-соединение избавляет от единой точки отказа системы (точки входа).
 
-Повышение комфорта использования: данные о состоянии устройств, как и статистика, собираемая устройствами, хранится и обрабатывается на самих устройствах, что позволяет в случае восстановления системы после сбоя из-за внештатной ситуации, например отключение электроэнергии, сразу возобновить работу системы без ожидания синхронизации состояния.
+\end{itemize}
 
-Упрощение настройки системы: так как для настройки системы используется планировщик, распределяющий сценарии по устройствам, нет необходимости настраивать каждое устройство по-отдельности.
 
-Кроме того, повышается отказоустойчивость системы: в рамках одной локации невыполнение сценария возможно при неисправности только одного из двух устройств: устройства-инициатора или устройства-исполнителя.
-
-Повышается безопасность системы: распределенный подход для хранения сценариев и управления устройствами минимизирует получение злоумышленниками доступа ко всем устройствам . Объединение локаций, а также дистанционный мониторинг и управление системой осуществляется посредством шлюзов-ретрансляторов с использованием VPN соединения, что избавляет от единой точки отказа системы (точки входа) и 
-
-Нижеизложенный прототип может быть использован для построение адаптивной системы изменения освещения для подстройки под потребляемый пользователем контент для большего эффекта погружения (использование осветительный приборов в качестве фонового освещения). Так же данная система ввиду уменьшения задержек по сравнению с аналогами может быть использована для предсказания положения пользователя в умном здании и подстройки окружающего пространства под нужны пользователя с минимальной задержкой. Например, предсказываемое изменение состояния устройств, находящихся в одной локации с пользователем.
-В качестве сфер применения можно рассматривать не только системы домашней автоматизации, но и системы умных предприятий. Так данная система будет востребована на участках, связанных с риском для жизни, где использование проводов не представляется возможным, либо излишне затруднит построение “умного” предприятия. Например, металлургические предприятия.
 
 \newpage
 
@@ -126,7 +123,7 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 Вычислительные сети с древовидной структурой строятся там, где невозможно непосредственное применение базовых сетевых структур в чистом виде.
 
 
-\subsection{Обзор альтернатив}
+\subsection{Протоколы беспроводных сетей}
 В данный момент большинство производителей ИВ используют централизованный подход для построения СДА \cite{Rus_alternative}. В качестве центра умного дома (ЦУД) выступает устройство (хаб), объединяющее конечные устройства в единую сеть. Сценарии взаимодействия устройств могут быть локальными (сценарии хранятся в ЦУД) или облачными. Вариант с локальным расположением сценариев более предпочтительный, так как повышается отзывчивость системы и ее отказоустойчивость. Отдельную сложность представляет объединение устройств из разных экосистем: различные комбинации связей <<устройство>>, <<ЦУД>>, <<облако>>.
 \begin{figure}[h]
     \centering
@@ -196,6 +193,7 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{images/Fig07.png}
+    \captionsetup{justification=centering}
     \caption{Сравнение беспроводных протоколов передачи данных по дальности и скорости передачи. \cite{IMG_protocol_compare} }
     \label{fig:protocols_range_vs_speed}
 \end{figure}
@@ -250,7 +248,7 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
 Централизованные СДА, имеющие ЦУД, обладая несомненными преимуществами, такими как простота настройки и реализации,
 также имеют ряд недостатков: низкая скорость реакции, невысокая надежность и безопасность, сильно зависящая от ЦУД
 и облачной инфраструктуры. Для интеграции устройств, находящихся в разных сетях, используется централизованная
-координация через единое облако. На рис.~\ref{fig:distributed_home_example} представлена архитектура предлагаемой гибридной системы, подразумевающей
+координация через единое облако. На рис.~\ref{fig:GlobalSystemDesing} представлена архитектура предлагаемой гибридной системы, подразумевающей
 прямое взаимодействие устройств в СДА.
 
 
@@ -258,7 +256,7 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
     \centering
     \includegraphics[width=0.8\textwidth]{images/GlobalSystemDesing.png}
     \caption{Пример СДА с распределенной структурой}
-    \label{fig:distributed_home_example}
+    \label{fig:GlobalSystemDesing}
 \end{figure}
 
 Для взаимодействия физически разнесенных устройств предлагается использование
@@ -268,15 +266,23 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
 исполнителем (при нахождении устройств в одной зоне до нуля). Данное решение кроме повышения надежности системы также
 уменьшает задержку передачи информации, повышает отказоустойчивость системы и ее безопасность \cite{SecuritySmartHome, SecuritySmartHome2}.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/InternalSystemDesign.png}
+    \captionsetup{justification=centering}
+    \caption{Компонентная структура и процессы взаимодействия в\\кластере K0s предложеннной системы}
+    \label{fig:InternalSystemDesign}
+\end{figure}
+
 
 Шлюзы-ретрансляторы -- кластер K0s -- при выходе из строя какого-то узла, например, зоны
 K, перестанут обрабатываться межзонные события, связанные с зоной К. При этом функционал внутри и вне зоны
 К не изменится.
 
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/Fig05.png}
-    \caption{Пример реализации конечного устройства}
+    \caption{Реализация конечного устройства}
     \label{fig:end_device}
 \end{figure}
 
@@ -341,16 +347,17 @@ K, перестанут обрабатываться межзонные собы
 \subsection{Графический интерфейс}
 Был написано графическое приложение рис.~\ref{fig:GUI_base} на языке Python c использованием фреймворка Qt, в котором производилась настройка системы и ее отладка.
 
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/Fig11.png}
-    \caption{Графическое приложение с созданным внутри сценарием для конечных устройств}
+    \captionsetup{justification=centering}
+    \caption{Графическое приложение с созданным внутри\\сценарием для конечных устройств}
     \label{fig:GUI_base}
 \end{figure}
 
 Графический интерфейс позволяет прописывать и более сложные сценарии взадимодействия устройств, что можно увидеть на рис.~\ref{fig:GUI_adv}
 
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/Fig12.png}
     \caption{Пример более сложного сценария взаимодействия устройств}
@@ -379,7 +386,6 @@ K, перестанут обрабатываться межзонные собы
 
 \begin{table}[h!]
     \centering
-    \caption{Среднее время выполнения операций}
     \begin{tabular}{|>{\centering\arraybackslash}p{1cm}|>{\centering\arraybackslash}p{8cm}|>{\centering\arraybackslash}p{2.5cm}|}
     \hline
     \textbf{п/п} & \textbf{Тип операции} & \textbf{Время операции} \\
@@ -397,7 +403,8 @@ K, перестанут обрабатываться межзонные собы
     6 & Задержка СУД <<Умный дом с Алисой>> от Яндекс & $\sim$470 мс \\
     \hline
     \end{tabular}
-    \end{table}
+    \caption{Среднее время выполнения операций}
+\end{table}
     
 
 
