--- a/titlepage_example.tex
+++ b/titlepage_example.tex
@@ -42,12 +42,12 @@
 \begin{flushright}
 \begin{minipage}[t]{0.65\textwidth}
 {Научный руководитель:} \\
-доцент, кафедра компьютерного моделирования и \\многопроцессорных систем, Корхов Владимир Владиславович
+доцент, кафедра компьютерного моделирования и \\многопроцессорных систем,\\к.ф.-м.н., PhD\\Корхов Владимир Владиславович
 
 \vspace{10mm}
 
 {Рецензент:} \\
-доцент, кафедра компьютерного моделирования и \\многопроцессорных систем, Дик Геннадий Давидович
+доцент, кафедра компьютерного моделирования и \\многопроцессорных систем,\\к.т.н.\\Дик Геннадий Давидович
 \end{minipage}
 \end{flushright}
 
