modified:   main.pdf 	modified:   main.tex 	new file:   titlepage_practic.tex 	new file:   "\320\237\321\200\320\265\320\267\320\260.pdf" 	new file:   "\320\237\321\200\320\265\320\267\320\260.pptx" 	deleted:    "\320\237\321\200\320\265\320\267\320\260.pdf" 	deleted:    "\320\237\321\200\320\265\320\267\320\260.pptx"

--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,9 @@
 
 \begin{document}
 
-\input{titlepage_example.tex}
+%\input{titlepage_example.tex}
+\input{titlepage_practic.tex}
+
 
 
 \section*{Аннотация}
